[package]
name = "rust-nn-candle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-nn = { version = "0.2.1", features = ["cuda"] }
candle-core = { version = "0.2.1", features = ["cuda"] }
# candle-nn = "0.2.1"
# candle-core = "0.2.1"
candle-datasets = "0.2.1"


[features]
cuda = ["candle-core/cuda", "candle-nn/cuda"]
